Compiler/tests/typing/bad/testfile-field-3.rs

struct S { a: i32 }
fn main() { let x = 42; x.a; }
